--- a/test/fixtures/cities.yml
+++ b/test/fixtures/cities.yml
@@ -1,11 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  created_at: 2015-09-13 18:31:03
-  updated_at: 2015-09-13 18:31:03
+  name: Hamburg
+  created_at: 2015-09-14 18:31:03
+  updated_at: 2015-09-14 18:31:03
 
 two:
-  name: MyString
-  created_at: 2015-09-13 18:31:03
-  updated_at: 2015-09-13 18:31:03
+  name: Budapest
+  created_at: 2015-09-14 18:31:03
+  updated_at: 2015-09-14 18:31:03
+  
+three:
+  name: Dublin
+  created_at: 2015-09-14 18:31:03
+  updated_at: 2015-09-14 18:31:03
+  
+four:
+  name: Sao Paulo
+  created_at: 2015-09-14 18:31:03
+  updated_at: 2015-09-14 18:31:03
